# face-detection

./: active_speaker_detection.py  clip_generator.py  generate_clips_cli.py  generate_clips_cli.spec  pyproject.toml  scene_algorithm.py
