[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["whoant <vovanhoangtuan4.2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pyinstaller = { version = "^6.14.1", python = "3.9.9" }
dlib  = { version = "20.0.0", python = "3.9.9" }
numpy  = { version = "1.26.4", python = "3.9.9" }
opencv-python-headless  = { version = "4.10.0.82", python = "3.9.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
